Initial grunt work to update biome api
(cherry picked from commit e48061fffb670e175599f2a7396de420666c07aa)

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -8,12 +8,12 @@
     "MixinAddEdgeBiomesLayer",
     "MixinAddHillsLayer",
     "MixinAddRiversLayer",
-    "MixinBiomeSource",
-    "MixinSetBaseBiomesLayer",
     "MixinMinecraftDedicatedServer",
     "MixinMultiNoiseBiomeSource",
+    "MixinSetBaseBiomesLayer",
     "MixinVanillaLayeredBiomeSource",
-    "MultiNoiseBiomeSourceAccessor"
+    "MultiNoiseBiomeSourceAccessor",
+    "VanillaLayeredBiomeSourceAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
