--- a/fabric-renderer-registries-v1/build.gradle
+++ b/fabric-renderer-registries-v1/build.gradle
@@ -1,6 +1,8 @@
 archivesBaseName = "fabric-renderer-registries-v1"
-version = getSubprojectVersion(project, "2.0.1")
+version = getSubprojectVersion(project, "2.1.0")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
+
+	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 }
