--- a/fabric-entity-events-v1/build.gradle
+++ b/fabric-entity-events-v1/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "fabric-entity-event-v1"
+archivesBaseName = "fabric-entity-events-v1"
 version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
