Initial attempt at biome-api, merged manually from different branches

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -3,17 +3,13 @@
   "package": "net.fabricmc.fabric.mixin.biome",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "DimensionOptionsAccessor",
-    "DimensionTypeAccessor",
-    "MixinAddEdgeBiomesLayer",
-    "MixinAddHillsLayer",
-    "MixinAddRiversLayer",
-    "MixinBiomeSource",
-    "MixinSetBaseBiomesLayer",
-    "MixinMinecraftDedicatedServer",
-    "MixinMultiNoiseBiomeSource",
-    "MixinVanillaLayeredBiomeSource",
-    "MultiNoiseBiomeSourceAccessor"
+    "DynamicRegistryManagerAccessor",
+    "VanillaLayeredBiomeSourceMixin",
+    "MultiNoiseBiomeSourcePresetMixin",
+    "SpawnSettingsAccessor",
+    "SpawnDensityAccessor",
+    "BiomeEffectsAccessor",
+    "BiomeMixin"
   ],
   "injectors": {
     "defaultRequire": 1
