--- a/fabric-biomes-v1/build.gradle
+++ b/fabric-biomes-v1/build.gradle
@@ -1,2 +1,8 @@
 archivesBaseName = "fabric-biomes-v1"
 version = getSubprojectVersion(project, "1.0.2")
+
+dependencies {
+	compile project(path: ':fabric-api-base', configuration: 'dev')
+	compile project(path: ':fabric-registry-sync-v0', configuration: 'dev')
+	compile project(path: ':fabric-networking-v0', configuration: 'dev')
+}
