Ported 1.16.1 biomes-api-v1 to 1.16.2. Public API changes: - Removed flagging biomes as suitable for player spawns since that is now handled in the Biome Builder. - Changed API over to RegistryKey's, not because it's necessary, but because it is more ergonomic since Vanilla Biomes in BuiltInBiomes are now all exposed as keys, rather than instances.

--- a/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
+++ b/fabric-biome-api-v1/src/main/resources/fabric-biome-api-v1.mixins.json
@@ -3,16 +3,16 @@
   "package": "net.fabricmc.fabric.mixin.biome",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "AddHillsLayerAccessor",
-    "BuiltinBiomesAccessor",
     "MixinAddEdgeBiomesLayer",
     "MixinAddHillsLayer",
     "MixinAddRiversLayer",
-    "MixinMultiNoiseBiomeSource",
     "MixinSetBaseBiomesLayer",
-    "MixinTheEndBiomeSource",
-    "MixinTheNetherDimension",
-    "MixinVanillaLayeredBiomeSource"
+    "MixinMultiNoiseBiomeSource",
+    "VanillaLayeredBiomeSourceAccessor",
+    "MultiNoiseBiomeSourceAccessor",
+    "BiomeSourceAccessor",
+    "BiomesAccessor",
+    "AddHillsLayerAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
