--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -3,17 +3,16 @@
   "package": "net.fabricmc.fabric.mixin.biome",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "DimensionOptionsAccessor",
-    "DimensionTypeAccessor",
+    "AddHillsLayerAccessor",
+    "BiomeSourceAccessor",
+    "BuiltinBiomesAccessor",
     "MixinAddEdgeBiomesLayer",
     "MixinAddHillsLayer",
     "MixinAddRiversLayer",
-    "MixinBiomeSource",
-    "MixinSetBaseBiomesLayer",
-    "MixinMinecraftDedicatedServer",
     "MixinMultiNoiseBiomeSource",
-    "MixinVanillaLayeredBiomeSource",
-    "MultiNoiseBiomeSourceAccessor"
+    "MixinSetBaseBiomesLayer",
+    "MultiNoiseBiomeSourceAccessor",
+    "VanillaLayeredBiomeSourceAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
