rebased on 1.16 master, style fixes

--- a/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
+++ b/fabric-biomes-v1/src/main/resources/fabric-biomes-v1.mixins.json
@@ -9,7 +9,7 @@
     "SpawnSettingsAccessor",
     "SpawnDensityAccessor",
     "BiomeEffectsAccessor",
-    "BiomeMixin"
+    "DynamicRegistryManagerMixin"
   ],
   "injectors": {
     "defaultRequire": 1
