--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 	id 'eclipse'
 	id 'idea'
 	id 'maven-publish'
-	id 'fabric-loom' version '0.4.28' apply false
+	id 'fabric-loom' version '0.5.23' apply false
 	id 'net.minecrell.licenser' version '0.4.1'
 	id "org.ajoberstar.grgit" version "3.1.1"
 	id 'com.matthewprenger.cursegradle' version "1.4.0"
@@ -78,6 +78,10 @@ allprojects {
 
 	configurations {
 		dev
+	}
+
+	loom {
+		shareCaches = true
 	}
 
 	repositories {
