--- a/fabric-biome-api-v1/build.gradle
+++ b/fabric-biome-api-v1/build.gradle
@@ -1,2 +1,2 @@
-archivesBaseName = "fabric-biomes-v1"
-version = getSubprojectVersion(project, "1.1.0")
+archivesBaseName = "fabric-biome-api-v1"
+version = getSubprojectVersion(project, "2.0.0")
