--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include 'fabric-api-base'
 include 'fabric-blockrenderlayer-v1'
 include 'fabric-commands-v0'
 include 'fabric-command-api-v1'
+include 'fabric-component-access-api-v1'
 include 'fabric-containers-v0'
 include 'fabric-content-registries-v0'
 include 'fabric-crash-report-info-v1'
