--- a/fabric-provider-api-v1/build.gradle
+++ b/fabric-provider-api-v1/build.gradle
@@ -1,4 +1,4 @@
-archivesBaseName = "fabric-component-access-api-v1"
+archivesBaseName = "fabric-provider-api-v1"
 version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
