--- a/fabric-extensibility-api-v1/build.gradle
+++ b/fabric-extensibility-api-v1/build.gradle
@@ -3,8 +3,5 @@ version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
-}
-
-minecraft {
-	accessWidener = file("src/main/resources/fabric-extensibility-api-v1.accesswidener")
+	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
 }
