--- a/fabric-extensibility-api-v1/build.gradle
+++ b/fabric-extensibility-api-v1/build.gradle
@@ -5,3 +5,7 @@ dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
 	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
 }
+
+minecraft {
+	accessWidener = file("src/main/resources/fabric-extensibility-api-v1.accesswidener")
+}
