--- a/fabric-command-api-v1/build.gradle
+++ b/fabric-command-api-v1/build.gradle
@@ -2,7 +2,9 @@ archivesBaseName = "fabric-command-api-v1"
 version = getSubprojectVersion(project, "1.0.8")
 
 dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
-
 	testmodCompile project(path: ':fabric-events-lifecycle-v0', configuration: 'dev')
 }
+
+moduleDependencies(project, [
+		'fabric-api-base'
+])
