--- a/fabric-dimensions-v1/build.gradle
+++ b/fabric-dimensions-v1/build.gradle
@@ -2,9 +2,11 @@ archivesBaseName = "fabric-dimensions-v1"
 version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
-	compile project(path: ':fabric-networking-v0', configuration: 'dev')
-	compile project(path: ':fabric-registry-sync-v0', configuration: 'dev')
-
 	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 }
+
+moduleDependencies(project, [
+		'fabric-api-base',
+		'fabric-networking-v0',
+		'fabric-registry-sync-v0'
+])
