--- a/fabric-rendering-fluids-v1/build.gradle
+++ b/fabric-rendering-fluids-v1/build.gradle
@@ -1,6 +1,6 @@
 archivesBaseName = "fabric-rendering-fluids-v1"
 version = getSubprojectVersion(project, "0.1.11")
 
-dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
-}
+moduleDependencies(project, [
+		'fabric-api-base'
+])
