--- a/fabric-object-builders-v0/build.gradle
+++ b/fabric-object-builders-v0/build.gradle
@@ -4,4 +4,5 @@ version = getSubprojectVersion(project, "0.7.0")
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
 	compile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
+	compile project(path: ':fabric-tool-attribute-api-v1', configuration: 'dev')
 }
