--- a/fabric-tool-attribute-api-v1/build.gradle
+++ b/fabric-tool-attribute-api-v1/build.gradle
@@ -3,6 +3,7 @@ version = getSubprojectVersion(project, "1.2.3")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
+	compile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 	compile project(path: ':fabric-tag-extensions-v0', configuration: 'dev')
 	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
