Publish releases using github actions

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ class Globals {
 	static def yarnVersion = "+build.1"
 }
 
-version = Globals.baseVersion + "+" + (ENV.BUILD_NUMBER ? ("build." + ENV.BUILD_NUMBER) : "local") + "-" + getBranch()
+version = Globals.baseVersion + "+" + (ENV.GITHUB_RUN_NUMBER ? ("build." + ENV.GITHUB_RUN_NUMBER) : "local") + "-" + getBranch()
 logger.lifecycle("Building Fabric: " + version)
 
 import org.apache.commons.codec.digest.DigestUtils
@@ -41,8 +41,9 @@ def getSubprojectVersion(project, version) {
 }
 
 def getBranch() {
-	if (System.getenv().GIT_BRANCH) {
-		def branch = System.getenv().GIT_BRANCH
+	def ENV = System.getenv()
+	if (ENV.GITHUB_REF) {
+		def branch = ENV.GITHUB_REF
 		return branch.substring(branch.lastIndexOf("/") + 1)
 	}
 	if (grgit == null) {
@@ -235,12 +236,13 @@ publishing {
 
 void setupRepositories(RepositoryHandler repositories) {
 	//repositories.mavenLocal() // uncomment for testing
-	if (project.hasProperty('mavenPass')) {
+	def ENV = System.getenv()
+	if (ENV.MAVEN_URL) {
 		repositories.maven {
-			url "http://mavenupload.modmuss50.me/"
+			url ENV.MAVEN_URL
 			credentials {
-				username 'buildslave'
-				password project.getProperty('mavenPass')
+				username ENV.MAVEN_USERNAME
+				password ENV.MAVEN_PASSWORD
 			}
 		}
 	}
@@ -266,8 +268,8 @@ dependencies {
 }
 
 curseforge {
-	if (project.hasProperty('curse_api_key')) {
-		apiKey = project.getProperty('curse_api_key')
+	if (ENV.CURSEFORGE_API_KEY) {
+		apiKey = ENV.CURSEFORGE_API_KEY
 	}
 	project {
 		id = '306612'
@@ -294,11 +296,11 @@ import org.kohsuke.github.GitHub
 
 task github(dependsOn: remapMavenJar) {
 	onlyIf {
-		project.hasProperty('github_api_key')
+		ENV.GITHUB_TOKEN
 	}
 	doLast {
-		def github = GitHub.connectUsingOAuth(project.getProperty('github_api_key') as String)
-		def repository = github.getRepository("FabricMC/fabric")
+		def github = GitHub.connectUsingOAuth(ENV.GITHUB_TOKEN as String)
+		def repository = github.getRepository(ENV.GITHUB_REPOSITORY)
 
 		def releaseBuilder = new GHReleaseBuilder(repository, version as String)
 		releaseBuilder.name("[$Globals.mcVersion] Fabric API $Globals.baseVersion build $ENV.BUILD_NUMBER")
