--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
         java-version: [1.8, 11, 14]
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
       - uses: actions/setup-java@v1
         with:
@@ -15,7 +15,7 @@ jobs:
       - uses: eskatos/gradle-command-action@v1.3.2
         with:
           gradle-version: wrapper
-          arguments: check build publishToMavenLocal --stacktrace --parallel
+          arguments: remapAllJars --stacktrace --parallel
           dependencies-cache-enabled: false
           configuration-cache-enabled: false
       - uses: actions/upload-artifact@v2
@@ -23,6 +23,22 @@ jobs:
           name: Artifacts
           path: build/libs/
       - uses: actions/upload-artifact@v2
+        # Technically this shouldn't cause issues, but the MC world runs on J8 and it's better safe than sorry.
+        if: ${{ matrix.java-version == 1.8 }}
         with:
           name: Artifacts
           path: ./*/build/libs/
+  check:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: gradle/wrapper-validation-action@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - uses: eskatos/gradle-command-action@v1.3.2
+        with:
+          gradle-version: wrapper
+          arguments: check --stacktrace --parallel
+          dependencies-cache-enabled: false
+          configuration-cache-enabled: false
