--- a/settings.gradle
+++ b/settings.gradle
@@ -38,6 +38,7 @@ include 'fabric-networking-blockentity-v0'
 include 'fabric-object-builder-api-v1'
 include 'fabric-object-builders-v0'
 include 'fabric-particles-v1'
+include 'fabric-registry-api-v1'
 include 'fabric-registry-sync-v0'
 include 'fabric-renderer-api-v1'
 include 'fabric-renderer-indigo'
