--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,39 +6,19 @@ jobs:
       matrix:
         java-version: [1.8, 11, 14]
     runs-on: ubuntu-20.04
+    container:
+      image: openjdk:${{ matrix.java-version }}
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: ${{ matrix.java-version }}
-      - uses: eskatos/gradle-command-action@v1.3.2
-        with:
-          gradle-version: wrapper
-          arguments: remapAllJars compileTestmodJava --stacktrace --parallel
-          dependencies-cache-enabled: false
-          configuration-cache-enabled: false
+      - run: ./gradlew build publishToMavenLocal --stacktrace --parallel
       - uses: actions/upload-artifact@v2
         with:
           name: Artifacts
           path: build/libs/
       - uses: actions/upload-artifact@v2
-        # Technically this shouldn't cause issues, but the MC world runs on J8 and it's better safe than sorry.
-        if: ${{ matrix.java-version == 1.8 }}
+        # Used to make sure jars are built with a consistent version. Should be the same as the release build.
+        if: ${{ matrix.java-version == 14 }}
         with:
           name: Artifacts
           path: ./*/build/libs/
-  check:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: gradle/wrapper-validation-action@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - uses: eskatos/gradle-command-action@v1.3.2
-        with:
-          gradle-version: wrapper
-          arguments: check --stacktrace --parallel
-          dependencies-cache-enabled: false
-          configuration-cache-enabled: false
