--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,10 +4,10 @@ jobs:
   build:
     strategy:
       matrix:
-        java-version: [1.8, 11, 14]
+        java-version: [8, 11, 14]
     runs-on: ubuntu-20.04
     container:
-      image: openjdk:${{ matrix.java-version }}
+      image: openjdk:${{ matrix.java-version }}-jdk
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
