--- a/fabric-extensibility-api-v1/build.gradle
+++ b/fabric-extensibility-api-v1/build.gradle
@@ -3,9 +3,7 @@ version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
-	compile project(path: ':fabric-rendering-v1', configuration: 'dev')
-	compile project(path: ':fabric-networking-v0', configuration: 'dev')
-	compile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
+	testmodCompile project(path: ':fabric-rendering-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
 }
 
