Add first iteration of provider api test mod

--- a/fabric-provider-api-v1/build.gradle
+++ b/fabric-provider-api-v1/build.gradle
@@ -1,2 +1,6 @@
 archivesBaseName = "fabric-provider-api-v1"
 version = getSubprojectVersion(project, "1.0.0")
+
+dependencies {
+	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
+}
