--- a/fabric-content-registries-v0/build.gradle
+++ b/fabric-content-registries-v0/build.gradle
@@ -4,4 +4,5 @@ version = getSubprojectVersion(project, "0.2.0")
 dependencies {
 	compile project(path: ':fabric-api-base', configuration: 'dev')
 	compile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
+	compile project(path: ":fabric-content-registries-v1", configuration: 'dev') // for javadoc
 }
