20w45a: Reimplement Chunk events, fix up block-entity-networking
This also adds some maintainer comments to two injections in game rule api.

No this does not compile

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ def ENV = System.getenv()
 
 class Globals {
 	static def baseVersion = "0.25.1"
-	static def mcVersion = "1.16.4"
+	static def mcVersion = "20w45a"
 	static def yarnVersion = "+build.1"
 	static def loaderVersion = "0.10.5+build.213"
 }
@@ -284,7 +284,7 @@ curseforge {
 	project {
 		id = "306612"
 		changelog = "A changelog can be found at https://github.com/FabricMC/fabric/commits"
-		releaseType = "release"
+		releaseType = "beta"
 		addGameVersion "1.16.4"
 		addGameVersion "Fabric"
 
