--- a/fabric-screen-handler-api-v1/build.gradle
+++ b/fabric-screen-handler-api-v1/build.gradle
@@ -8,5 +8,6 @@ minecraft {
 dependencies {
 	compile(project(path: ':fabric-api-base', configuration: 'dev'))
 	compile(project(path: ':fabric-networking-v0', configuration: 'dev'))
+	testmodCompile(project(path: ':fabric-object-builder-api-v1', configuration: 'dev'))
 	testmodRuntimeOnly(project(path: ':fabric-resource-loader-v0', configuration: 'dev'))
 }
