Add test mod run tasks, add a very basic auto test server task

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v1
       - uses: gradle/wrapper-validation-action@v1
       - run: ./gradlew check build publishToMavenLocal --stacktrace --parallel
+      - run: mkdir run && echo "eula=true" >> run/eula.txt
+      - run: ./gradlew runAutoTestServer --stacktrace
       - uses: actions/upload-artifact@v2
         with:
           name: Artifacts
