Spin up a dedicated server on github actions + add run tasks for test mods. (#1163)
* Add test mod run tasks, add a very basic auto test server task

* License header

* Minor cleanup

* Fix bad depends

(cherry picked from commit ba858fb8b7d323551b01da544ec404905943b232)

--- a/fabric-api-base/build.gradle
+++ b/fabric-api-base/build.gradle
@@ -1,2 +1,6 @@
 archivesBaseName = "fabric-api-base"
 version = getSubprojectVersion(project, "0.1.2")
+
+dependencies {
+	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
+}
