--- a/fabric-lifecycle-events-v1/build.gradle
+++ b/fabric-lifecycle-events-v1/build.gradle
@@ -1,6 +1,6 @@
 archivesBaseName = "fabric-lifecycle-events-v1"
 version = getSubprojectVersion(project, "1.3.2")
 
-dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
-}
+moduleDependencies(project, [
+		'fabric-api-base'
+])
