--- a/fabric-renderer-registries-v1/build.gradle
+++ b/fabric-renderer-registries-v1/build.gradle
@@ -2,7 +2,9 @@ archivesBaseName = "fabric-renderer-registries-v1"
 version = getSubprojectVersion(project, "3.0.2")
 
 dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
-
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 }
+
+moduleDependencies(project, [
+		'fabric-api-base'
+])
