--- a/fabric-networking-v0/build.gradle
+++ b/fabric-networking-v0/build.gradle
@@ -2,5 +2,6 @@ archivesBaseName = "fabric-networking-v0"
 version = getSubprojectVersion(project, "0.1.10")
 
 moduleDependencies(project, [
-		'fabric-api-base'
+		'fabric-api-base',
+		'fabric-player-tracking-api-v1'
 ])
