--- a/fabric-dimensions-v1/build.gradle
+++ b/fabric-dimensions-v1/build.gradle
@@ -3,6 +3,7 @@ version = getSubprojectVersion(project, "1.0.0")
 
 dependencies {
 	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
+	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
 }
 
 moduleDependencies(project, [
