--- a/fabric-dimensions-v1/build.gradle
+++ b/fabric-dimensions-v1/build.gradle
@@ -4,10 +4,10 @@ version = getSubprojectVersion(project, "1.0.0")
 dependencies {
 	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
-	testmodCompile project(path: 'fabric-lifecycle-events-v1', configurations: 'dev')
 }
 
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-registry-sync-v0',
+		'fabric-lifecycle-events-v1'
 ])
