--- a/fabric-entity-events-v1/build.gradle
+++ b/fabric-entity-events-v1/build.gradle
@@ -1,8 +1,10 @@
 archivesBaseName = "fabric-entity-events-v1"
 version = getSubprojectVersion(project, "1.0.0")
 
-dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
+moduleDependencies(project, [
+		'fabric-api-base'
+])
 
+dependencies {
 	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 }
