--- a/fabric-api-base/build.gradle
+++ b/fabric-api-base/build.gradle
@@ -2,5 +2,6 @@ archivesBaseName = "fabric-api-base"
 version = getSubprojectVersion(project, "0.1.2")
 
 dependencies {
+	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 }
