--- a/fabric-object-builder-api-v1/build.gradle
+++ b/fabric-object-builder-api-v1/build.gradle
@@ -7,7 +7,8 @@ dependencies {
 
 moduleDependencies(project, [
 		'fabric-api-base',
-		'fabric-tool-attribute-api-v1'
+		'fabric-tool-attribute-api-v1',
+		'fabric-blockrenderlayer-v1'
 ])
 
 minecraft {
