20w48a - Just mapping updates

--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ plugins {
 def ENV = System.getenv()
 
 class Globals {
-	static def baseVersion = "0.26.3"
-	static def mcVersion = "20w46a"
-	static def yarnVersion = "+build.2"
+	static def baseVersion = "0.26.4"
+	static def mcVersion = "20w48a"
+	static def yarnVersion = "+build.1"
 	static def loaderVersion = "0.10.5+build.213"
 }
 
@@ -338,7 +338,7 @@ curseforge {
 		id = "306612"
 		changelog = "A changelog can be found at https://github.com/FabricMC/fabric/commits"
 		releaseType = "beta"
-		addGameVersion "1.16-Snapshot"
+		addGameVersion "1.17"
 		addGameVersion "Fabric"
 
 		mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")) {
