--- a/fabric-provider-api-v1/build.gradle
+++ b/fabric-provider-api-v1/build.gradle
@@ -1,9 +1,11 @@
 archivesBaseName = "fabric-provider-api-v1"
-version = getSubprojectVersion(project, "0.1.0")
+version = getSubprojectVersion(project, "0.2.0")
+
+moduleDependencies(project, [
+	'fabric-api-base',
+	'fabric-lifecycle-events-v1'
+])
 
 dependencies {
-	compile project(path: ':fabric-api-base', configuration: 'dev')
-	compile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
-
 	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
 }
