--- a/fabric-events-interaction-v0/build.gradle
+++ b/fabric-events-interaction-v0/build.gradle
@@ -2,6 +2,7 @@ archivesBaseName = "fabric-events-interaction-v0"
 version = getSubprojectVersion(project, "0.4.3")
 
 dependencies {
+	testmodImplementation project(path: ':fabric-tag-extensions-v0', configuration: 'dev')
 	testmodImplementation project(path: ':fabric-item-api-v1', configuration: 'dev')
 }
 
