Cache the fuel time map in the fuel registry (#1108)
* Cache the fuel time map in the fuel registry

* Use a faster map for the fuel times

* Rebuild the fuel times map on the client side too

* Use more compatible mixins

* Replace a function overwrite by a TAIL inject

* Mixin formatting

* Indentation

* Make cache thread-safe, switch to boxed collection (IHM) since most
uses yield boxed results, refactor cache clearing

* fix import formatting

Co-authored-by: Player <player@player.to>

--- a/fabric-content-registries-v0/build.gradle
+++ b/fabric-content-registries-v0/build.gradle
@@ -3,5 +3,6 @@ version = getSubprojectVersion(project, "0.1.9")
 
 moduleDependencies(project, [
 		'fabric-api-base',
+		'fabric-lifecycle-events-v1',
 		'fabric-resource-loader-v0'
 ])
