--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,11 @@ allprojects {
 
 	afterEvaluate {
 		remapJar {
+			manifest {
+				attributes 'Implementation-Title': 'FabricAPI',
+						'Implementation-Version': project.version,
+						'Main-Class': 'net.fabricmc.fabric.impl.launch.APIWarning'
+			}
 			input = file("${project.buildDir}/libs/$archivesBaseName-${version}-dev.jar")
 			archiveName = "${archivesBaseName}-${version}.jar"
 		}
