--- a/settings.gradle
+++ b/settings.gradle
@@ -51,5 +51,6 @@ include 'fabric-resource-loader-v0'
 include 'fabric-screen-handler-api-v1'
 include 'fabric-structure-api-v1'
 include 'fabric-tag-extensions-v0'
+include 'fabric-tags-v1'
 include 'fabric-textures-v0'
 include 'fabric-tool-attribute-api-v1'
