Revert build.gradle changes

--- a/build.gradle
+++ b/build.gradle
@@ -302,6 +302,10 @@ void setupRepositories(RepositoryHandler repositories) {
 	if (ENV.MAVEN_URL) {
 		repositories.maven {
 			url ENV.MAVEN_URL
+			credentials {
+				username ENV.MAVEN_USERNAME
+				password ENV.MAVEN_PASSWORD
+			}
 		}
 	}
 }
