--- a/fabric-command-api-v1/build.gradle
+++ b/fabric-command-api-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-command-api-v1"
 version = getSubprojectVersion(project, "1.0.9")
 
+module {
+	stable()
+}
+
 dependencies {
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 }
