--- a/fabric-loot-tables-v1/build.gradle
+++ b/fabric-loot-tables-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-loot-tables-v1"
 version = getSubprojectVersion(project, "1.0.1")
 
+module {
+	stable()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base'
 ])
