--- a/fabric-object-builder-api-v1/build.gradle
+++ b/fabric-object-builder-api-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-object-builder-api-v1"
 version = getSubprojectVersion(project, "1.9.2")
 
+module {
+	stable()
+}
+
 dependencies {
 	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 }
