--- a/fabric-renderer-indigo/build.gradle
+++ b/fabric-renderer-indigo/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-renderer-indigo"
 version = getSubprojectVersion(project, "0.4.3")
 
+module {
+	stable()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-renderer-api-v1'
