--- a/fabric-screen-handler-api-v1/build.gradle
+++ b/fabric-screen-handler-api-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-screen-handler-api-v1"
 version = getSubprojectVersion(project, "1.1.0")
 
+module {
+	stable()
+}
+
 minecraft {
 	accessWidener = file('src/main/resources/fabric-screen-handler-api-v1.accesswidener')
 }
