--- a/fabric-api-base/build.gradle
+++ b/fabric-api-base/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-api-base"
 version = getSubprojectVersion(project, "0.2.0")
 
+module {
+	stable()
+}
+
 dependencies {
 	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
