--- a/fabric-biome-api-v1/build.gradle
+++ b/fabric-biome-api-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-biome-api-v1"
 version = getSubprojectVersion(project, "3.1.0")
 
+module {
+	experimental()
+}
+
 minecraft {
     accessWidener = file("src/main/resources/fabric-biome-api-v1.accesswidener")
 }
