--- a/fabric-commands-v0/build.gradle
+++ b/fabric-commands-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-commands-v0"
 version = getSubprojectVersion(project, "0.2.0")
 
+module {
+	deprecated()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-command-api-v1'
