--- a/fabric-containers-v0/build.gradle
+++ b/fabric-containers-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-containers-v0"
 version = getSubprojectVersion(project, "0.1.9")
 
+module {
+	deprecated()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-networking-v0'
