--- a/fabric-content-registries-v0/build.gradle
+++ b/fabric-content-registries-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-content-registries-v0"
 version = getSubprojectVersion(project, "0.2.0")
 
+module {
+	stable()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-lifecycle-events-v1',
