--- a/fabric-dimensions-v1/build.gradle
+++ b/fabric-dimensions-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-dimensions-v1"
 version = getSubprojectVersion(project, "2.0.1")
 
+module {
+	experimental()
+}
+
 dependencies {
 	testmodCompile project(path: ':fabric-command-api-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-resource-loader-v0', configuration: 'dev')
