--- a/fabric-events-lifecycle-v0/build.gradle
+++ b/fabric-events-lifecycle-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-events-lifecycle-v0"
 version = getSubprojectVersion(project, "0.2.0")
 
+module {
+	deprecated()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-item-api-v1',
