--- a/fabric-item-groups-v0/build.gradle
+++ b/fabric-item-groups-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-item-groups-v0"
 version = getSubprojectVersion(project, "0.2.1")
 
+module {
+	stable()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-resource-loader-v0'
