--- a/fabric-key-binding-api-v1/build.gradle
+++ b/fabric-key-binding-api-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-key-binding-api-v1"
 version = getSubprojectVersion(project, "1.0.1")
 
+module {
+	stable()
+}
+
 dependencies {
 	testmodCompile project(path: ':fabric-api-base', configuration: 'dev')
 	testmodCompile project(path: ':fabric-events-lifecycle-v0', configuration: 'dev')
