--- a/fabric-keybindings-v0/build.gradle
+++ b/fabric-keybindings-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-keybindings-v0"
 version = getSubprojectVersion(project, "0.2.0")
 
+module {
+	deprecated()
+}
+
 moduleDependencies(project, [
 		'fabric-key-binding-api-v1'
 ])
