--- a/fabric-mining-levels-v0/build.gradle
+++ b/fabric-mining-levels-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-mining-levels-v0"
 version = getSubprojectVersion(project, "0.1.2")
 
+module {
+	deprecated()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-tag-extensions-v0',
