--- a/fabric-networking-blockentity-v0/build.gradle
+++ b/fabric-networking-blockentity-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-networking-blockentity-v0"
 version = getSubprojectVersion(project, "0.2.7")
 
+module {
+	stable()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base'
 ])
