--- a/fabric-networking-v0/build.gradle
+++ b/fabric-networking-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-networking-v0"
 version = getSubprojectVersion(project, "0.3.1")
 
+module {
+	deprecated()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-networking-api-v1'
