--- a/fabric-registry-sync-v0/build.gradle
+++ b/fabric-registry-sync-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-registry-sync-v0"
 version = getSubprojectVersion(project, "0.7.3")
 
+module {
+	stable()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-networking-api-v1'
