--- a/fabric-rendering-v0/build.gradle
+++ b/fabric-rendering-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-rendering-v0"
 version = getSubprojectVersion(project, "1.1.1")
 
+module {
+	deprecated()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base',
 		'fabric-rendering-v1'
