--- a/fabric-resource-loader-v0/build.gradle
+++ b/fabric-resource-loader-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-resource-loader-v0"
 version = getSubprojectVersion(project, "0.4.0")
 
+module {
+	stable()
+}
+
 dependencies {
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-api-base', configuration: 'dev')
