--- a/fabric-textures-v0/build.gradle
+++ b/fabric-textures-v0/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-textures-v0"
 version = getSubprojectVersion(project, "1.0.5")
 
+module {
+	stable()
+}
+
 moduleDependencies(project, [
 		'fabric-api-base'
 ])
