--- a/fabric-tool-attribute-api-v1/build.gradle
+++ b/fabric-tool-attribute-api-v1/build.gradle
@@ -1,6 +1,10 @@
 archivesBaseName = "fabric-tool-attribute-api-v1"
 version = getSubprojectVersion(project, "1.2.5")
 
+module {
+	stable()
+}
+
 dependencies {
 	testmodCompile project(path: ':fabric-object-builder-api-v1', configuration: 'dev')
 	testmodCompile project(path: ':fabric-lifecycle-events-v1', configuration: 'dev')
